--- a/MedFiles o AssistMedic/reg.html
+++ b/MedFiles o AssistMedic/reg.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav>
+    <header>
         <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">MedFiles</a>
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </nav>
-    </nav>
+    </header>
     <main>
         <section class="h-100 bg-dark">
             <div class="container py-5 h-100">
@@ -64,14 +64,14 @@
                                         <div class="row">
                                             <div class="col-md-6 mb-4">
                                                 <div data-mdb-input-init class="form-outline">
-                                                    <input type="text" id="form3Example1m"
+                                                    <input placeholder="Ingresar Nombre" type="text" id="form3Example1m"
                                                         class="form-control form-control-lg" />
                                                     <label class="form-label" for="form3Example1m">Nombres</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6 mb-4">
                                                 <div data-mdb-input-init class="form-outline">
-                                                    <input type="text" id="form3Example1n"
+                                                    <input placeholder="Ingresar Apellido" type="text" id="form3Example1n"
                                                         class="form-control form-control-lg" />
                                                     <label class="form-label" for="form3Example1n">Apellido/s</label>
                                                 </div>
@@ -81,14 +81,14 @@
                                         <div class="row">
                                             <div class="col-md-6 mb-4">
                                                 <div data-mdb-input-init class="form-outline">
-                                                    <input type="text" id="form3Example1m1"
+                                                    <input placeholder="Ingresar Ciudad" type="text" id="form3Example1m1"
                                                         class="form-control form-control-lg" />
                                                     <label class="form-label" for="form3Example1m1">Ciudad</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6 mb-4">
                                                 <div data-mdb-input-init class="form-outline">
-                                                    <input type="text" id="form3Example1n1"
+                                                    <input placeholder="Ingresar localidad" type="text" id="form3Example1n1"
                                                         class="form-control form-control-lg" />
                                                     <label class="form-label" for="form3Example1n1">Localidad
                                                     </label>
@@ -97,7 +97,7 @@
                                         </div>
 
                                         <div data-mdb-input-init class="form-outline mb-4">
-                                            <input type="text" id="form3Example8"
+                                            <input placeholder="Ingrese su Dirección" type="text" id="form3Example8"
                                                 class="form-control form-control-lg" />
                                             <label class="form-label" for="form3Example8">Dirección</label>
                                         </div>
@@ -127,7 +127,7 @@
                                         </div>
 
                                         <div class="row" style="display: flex; justify-content: center;">
-                                            <p style="text-align: center;">Fecha de Nacimiento</p>
+                                            <p style="text-align: center;">Fecha de Nacimiento: </p>
                                             <div class="col-md-6 mb-4" style="width: 30%;">
 
                                                 <select data-mdb-select-init>
