--- a/MedFiles o AssistMedic/operaciones.html
+++ b/MedFiles o AssistMedic/operaciones.html
@@ -6,7 +6,7 @@
     <title>MedFiles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/operaciones.css">
 </head>
 
 <body>
@@ -54,28 +54,21 @@
             <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(41, 98, 50); color:white; border: none; font-weight: bold;" aria-current="true">
               TURNOS
             </a>
-            <a href="" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 2px solid white; border-bottom: 2px solid white; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
-            <a href="#" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border: none;>CALENDARIO</a>
-            <a href="#" class="list-group-item list-group-item-action">CALENDARIO</a>
-            <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+            <a href="" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 1px solid white; border-bottom: 1px solid white; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
+            <a href="#" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-bottom: 1px solid white; border-left: none; border-right: none;">CALENDARIO</a>
+            <a href="#" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-bottom: none; border-left: none; border-right: none;">NO SE</a>
           </div>
     </aside>
     </div>
     
 
     <footer>
-      <!-- Footer -->
 <footer class="text-center text-lg-start" style="background-color: rgb(98, 165, 107);">
-  <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
     <div class="me-5 d-none d-lg-block" style="color: white; font-weight: 1000;">
       <span>MEDFILES</span>
     </div>
-    <!-- Left -->
-    <!-- Left -->
 
-    <!-- Right -->
     <div>
       <a href="" class="me-4 text-reset">
         <i class="fab fa-facebook-f"></i>
@@ -96,18 +89,12 @@
         <i class="fab fa-github"></i>
       </a>
     </div>
-    <!-- Right -->
   </section>
-  <!-- Section: Social media -->
 
-  <!-- Section: Links  -->
   <section class="">
     <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
       <div class="row mt-3">
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4" style="color: white; ">
             <i class="fas fa-gem me-3" style="font-weight: 1000;">¿Donde estamos?</i>
           </h6>
@@ -115,11 +102,8 @@
             
           </p>
         </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4" style="color: white;">
             CONTACTO
           </h6>
@@ -133,11 +117,8 @@
             <a href="https://a24films.com/television" target="_blank" class="text-reset">juanqi3489@gmail.com</a>
           </p>
         </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4" style="color: white;">
             NO SE QUE PONER
           </h6>
@@ -154,11 +135,8 @@
             <a href="" target="_blank"  class="text-reset"></a>
           </p>
         </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
           <h6 class="" style="color: white;">NO SE QUE PONER</h6>
           <p>
             <a href="" target="_blank" class="text-reset"></a>
@@ -173,14 +151,10 @@
             <a href="" target="_blank"  class="text-reset"></a>
           </p>
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
 </footer>
-<!-- Footer -->
 
     </footer>
 
