--- a/MedFiles o AssistMedic/medicosDispo.html
+++ b/MedFiles o AssistMedic/medicosDispo.html
@@ -6,7 +6,7 @@
     <title>MedFiles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/operaciones.css">
+    <link rel="stylesheet" href="assets/styles/medicosDispo.css">
 </head>
 
 <body>
@@ -51,10 +51,17 @@
     <aside>
         <h1 class= "border-bottom" style="color: white;">MENÚ</h1>
         <div class="list-group">
-            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border: none;">
+            <a href="turnos.html" class="list-group-item list-group-item-action active" style="background-color: rgb(62, 136, 72); color:white; border-top: none; border-bottom: 1px solid white; border-right: none; border-left: none;">
               TURNOS
             </a>
-            <a href="medicosDispo.html" class="list-group-item list-group-item-action" style="background-color: rgb(62, 136, 72); color:white; border-top: 1px solid white; border-bottom: none; border-right: none; border-left: none;">MÉDICOS DISPONIBLES</a>
+            <a href="medicosDispo.html" class="list-group-item list-group-item-action" style="background-color: rgb(41, 98, 50); color:white; border: none; border-bottom: none; font-weight: bold;" aria-current="true">MÉDICOS DISPONIBLES</a>
+          </div>
+          <div class="retroceso">
+            <a href="operaciones.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+                <path class="svg-path" fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+              </svg>
+            </a>
           </div>
     </aside>
     </div>
