--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedFiles</title>
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/style.css">
@@ -13,7 +14,8 @@
     <nav>
         <nav class="navbar navbar-expand-lg" style="background-color: rgb(98, 165, 107);" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">MedFiles</a>
+              <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="Logo" width="60" height="60" class="d-inline-block ">
+                MedFiles</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -46,6 +48,9 @@
     <main>
       <h1 style="color: white; font-weight: 1000;">¡Bienvenido a MedFiles!</h1>
       <section>
+      <div class="imagen-seccion">
+      <img src="assets/img/logo.png" alt="">
+      </div>
       <p>Te damos la bienvenida a nuestra página, a través de la cual vas a poder realizar el pedido de turnos, entre otras operaciones. <br>
       Para pedir turnos y demás, puedes dirigirte al apartado "OPERACIONES". <br>
       Si tienes un par de dudas, dirigete al apartado "+ INFORMACIÓN". <br>
